# claw-ea

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  TODOS.md  pyproject.toml
docs/superpowers/plans/: 2026-03-21-claw-ea-implementation.md  2026-03-26-md-first-content-pipeline.md
docs/superpowers/specs/: 2026-03-21-implementation-strategy-design.md  2026-03-26-behavior-constraints-design.md  2026-03-26-md-first-content-pipeline-design.md
openclaw-plugin/: PROMPT_TEMPLATE.md  index.ts  openclaw.plugin.json  package.json
openclaw-plugin/src/: mcp-bridge.ts  tools.ts
src/claw_ea/: __init__.py  __main__.py  config.py  converters.py  eventkit_utils.py  server.py
src/claw_ea/tools/: attachment.py  calendar.py  converter.py  obsidian.py  ocr.py  reminder.py  setup.py
tests/: conftest.py  test_attachment.py  test_calendar.py  test_config.py  test_converter_tool.py  test_converters.py  test_integration.py  test_obsidian.py  test_ocr.py  test_reminder.py  test_setup.py
